--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-organizational-chart": "^2.2.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
