--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.17",
     "@mantine/hooks": "^6.0.17",
+    "@modulz/radix-icons": "^4.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "use-pagination": "^1.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
