--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mantine/core": "^6.0.17",
     "@mantine/hooks": "^6.0.17",
     "@modulz/radix-icons": "^4.0.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-organizational-chart": "^2.2.1",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
