--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "gsap": "^3.12.2",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.0",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "redux-persist": "^6.0.0",
     "use-pagination": "^1.0.6",
     "web-vitals": "^2.1.4"
   },
