--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.17",
     "@mantine/hooks": "^6.0.17",
+    "@mantine/notifications": "^6.0.19",
     "@modulz/radix-icons": "^4.0.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
@@ -19,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-icons": "^4.10.1",
     "react-organizational-chart": "^2.2.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
