--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@uploadcare/react-widget": "^2.4.5",
     "axios": "^1.4.0",
     "gsap": "^3.12.2",
+    "million": "^2.6.4",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.0",
@@ -33,6 +34,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "json": "json-server --watch ./src/utility/db.json --port 4000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
