--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "redux-persist": "^6.0.0",
+    "redux-persist-transform-expire": "^0.0.2",
     "tailwind-scrollbar": "^3.0.5",
     "use-pagination": "^1.0.6",
     "web-vitals": "^2.1.4"
